[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/gui/honourable_header.png" type="Texture" id=1]
[ext_resource path="res://scenes/gui/hs_gui/hs_entry_displayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://themes/hs_theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/gui/hs_gui/hs_table_displayer.gd" type="Script" id=4]
[ext_resource path="res://themes/button_style_boxes/main_button_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://themes/button_style_boxes/main_button_normal.tres" type="StyleBox" id=6]
[ext_resource path="res://themes/button_style_boxes/main_button_hover.tres" type="StyleBox" id=7]

[node name="hs_table_displayer" type="Control"]
anchor_right = 0.529
anchor_bottom = 0.606
margin_right = 0.579956
margin_bottom = -94.48
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_vcontainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.841
margin_right = -1039.14
margin_bottom = -185.064
theme = ExtResource( 3 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hs_header" type="TextureRect" parent="main_vcontainer"]
margin_right = 1050.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 150 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="main_panel" type="Panel" parent="main_vcontainer"]
margin_top = 154.0
margin_right = 1050.0
margin_bottom = 614.0
rect_min_size = Vector2( 1050, 460 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_container" type="MarginContainer" parent="main_vcontainer/main_panel"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1002.0
margin_bottom = 334.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="entry_container" type="VBoxContainer" parent="main_vcontainer/main_panel/main_container"]
margin_right = 972.0
margin_bottom = 394.0
custom_constants/separation = 10

[node name="hs_entry_displayer0" parent="main_vcontainer/main_panel/main_container/entry_container" instance=ExtResource( 2 )]
margin_right = 972.0
margin_bottom = 55.0

[node name="hs_entry_displayer1" parent="main_vcontainer/main_panel/main_container/entry_container" instance=ExtResource( 2 )]
margin_top = 65.0
margin_right = 972.0
margin_bottom = 120.0

[node name="hs_entry_displayer2" parent="main_vcontainer/main_panel/main_container/entry_container" instance=ExtResource( 2 )]
margin_top = 130.0
margin_right = 972.0
margin_bottom = 185.0

[node name="hs_entry_displayer3" parent="main_vcontainer/main_panel/main_container/entry_container" instance=ExtResource( 2 )]
margin_top = 195.0
margin_right = 972.0
margin_bottom = 250.0

[node name="hs_entry_displayer4" parent="main_vcontainer/main_panel/main_container/entry_container" instance=ExtResource( 2 )]
margin_top = 260.0
margin_right = 972.0
margin_bottom = 315.0

[node name="exit_button" type="Button" parent="main_vcontainer/main_panel/main_container/entry_container"]
margin_top = 325.0
margin_right = 972.0
margin_bottom = 394.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
text = "Exit"
